[dmu1_ml_HS82] Correct VICS82 position columns

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
@@ -113,8 +113,8 @@
    "source": [
     "imported_columns = OrderedDict({\n",
     "        'VICS82ID': \"vics82_id\",\n",
-    "        'ra': \"vics82_ra\",\n",
-    "        'dec': \"vics82_dec\",\n",
+    "        'ALPHA_J2000': \"vics82_ra\",\n",
+    "        'DELTA_J2000': \"vics82_dec\",\n",
     "        'CLASS_STAR':  \"vics82_stellarity\",\n",
     "        'MAG_AUTO': \"m_vics82_k\", \n",
     "        'MAG_APER': \"m_ap_vics82_k\", \n",
