[dmu1_ml_HS82] Add near_ra0 parameter to astr. cor. functions

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
@@ -358,7 +358,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
     "    SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]),\n",
-    "    gaia_coords\n",
+    "    gaia_coords, near_ra0=True\n",
     ")\n",
     "\n",
     "print(\"RA correction: {}\".format(delta_ra))\n",
@@ -437,7 +437,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
