--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
@@ -337,7 +337,7 @@
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
-    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
+    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'], near_ra0=True)"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
     "    SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]),\n",
-    "    gaia_coords\n",
+    "    gaia_coords, near_ra0=True\n",
     ")\n",
     "\n",
     "print(\"RA correction: {}\".format(delta_ra))\n",
@@ -441,7 +441,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
