--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
@@ -381,7 +381,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
     "    SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]),\n",
-    "    gaia_coords\n",
+    "    gaia_coords, near_ra0=True\n",
     ")\n",
     "\n",
     "print(\"RA correction: {}\".format(delta_ra))\n",
@@ -452,7 +452,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
