--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
@@ -357,7 +357,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
     "    SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]),\n",
-    "    gaia_coords\n",
+    "    gaia_coords, near_ra0=True\n",
     ")\n",
     "\n",
     "print(\"RA correction: {}\".format(delta_ra))\n",
@@ -428,7 +428,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
