[dmu1_ml_HS82] Convert UKIDSS Vega mag to AB

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
@@ -21,7 +21,16 @@
     "\n",
     "J band magnitudes are available in two eopchs. We take the first arbitrarily.\n",
     "\n",
-    "Each source is associated with an epoch. These range between 2005 and 2007. We take 2006 for the epoch.\n"
+    "The magnitudes are “*Vega like*”.  The AB offsets are given by Hewett *et al.* (2016):\n",
+    "\n",
+    "| Band | AB offset |\n",
+    "|------|-----------|\n",
+    "| Y    | 0.634     |\n",
+    "| J    | 0.938     |\n",
+    "| H    | 1.379     |\n",
+    "| K    | 1.900     |\n",
+    "\n",
+    "Each source is associated with an epoch. These range between 2005 and 2007. We take 2006 for the epoch."
    ]
   },
   {
@@ -186,6 +195,18 @@
     "        catalogue[col][catalogue[col] < -100] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] < -100] = np.nan        \n",
     "\n",
+    "        # Vega to AB correction\n",
+    "        if col.endswith('y'):\n",
+    "            catalogue[col] += 0.634\n",
+    "        elif col.endswith('j'):\n",
+    "            catalogue[col] += 0.938\n",
+    "        elif col.endswith('h'):\n",
+    "            catalogue[col] += 1.379\n",
+    "        elif col.endswith('k'):\n",
+    "            catalogue[col] += 1.900\n",
+    "        else:\n",
+    "            print(\"{} column has wrong band...\".format(col))\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
