[dmu1_ml_HS82] Split the SDSS-S82 notebook in North and South

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.b_SDSS-S82_south.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.b_SDSS-S82_south.ipynb
@@ -17,16 +17,27 @@
     "- The u, g, r, i, z, auto fluxes and magnitudes.\n",
     "\n",
     "\n",
-    "We don't know when the maps have been observed. We will use the year of the reference paper."
+    "We don't know when the maps have been observed. We will use the year of the reference paper.\n",
+    "\n",
+    "The SDSS-S82 catalogue is very large and can't be processed at once. We divided it into a North catalogue and a South one around the declination 0 with a margin of 1.2 arcmin (i.e North is dec > -0.02 deg and South is dec < 0.02 deg). The margin is necessary because of the cleaning procedure.  At the end, we take only positive decs from North and negative from South."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was run with herschelhelp_internal version: \n",
+      "8d104c3 (Wed Jul 5 19:47:18 2017 +0100)\n"
+     ]
+    }
+   ],
    "source": [
     "from herschelhelp_internal import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
@@ -34,11 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yannick/.miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -74,7 +94,9 @@
     "    pass\n",
     "\n",
     "RA_COL = \"sdss_ra\"\n",
-    "DEC_COL = \"sdss_dec\""
+    "DEC_COL = \"sdss_dec\"\n",
+    "\n",
+    "SUFFIX=\"_south\""
    ]
   },
   {
@@ -120,7 +142,8 @@
     "    })\n",
     "\n",
     "\n",
-    "catalogue = Table.read(\"../../dmu0/dmu0_SDSS-S82/data/SDSS-S82_HELP-coverage.fits\")[list(imported_columns)]\n",
+    "catalogue = Table.read(\n",
+    "    \"../../dmu0/dmu0_SDSS-S82/data/SDSS-S82_HELP-coverage{}.fits\".format(SUFFIX))[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -335,7 +358,7 @@
    },
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/SDSS-S82.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/SDSS-S82{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   }
  ],
