[dmu1_ml_HS82] Correct PanSTARRS notebook

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.5_PanSTARRS-3SS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.5_PanSTARRS-3SS.ipynb
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
-    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'], near_ra0=True)"
+    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
    ]
   },
   {
@@ -375,7 +375,7 @@
    ],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
