First pass on ELAIS-S1. Running up to merge.

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "There is an old public version of the catalogue but we are using the newer private version in the hope that it will be public by the time we publish the masterlist.\n",
     "\n",
-    "Filters: Z,Y,J,H,K \n",
+    "Filters: Z,Y,J,H,Ks \n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -522,7 +522,7 @@
     }
    ],
    "source": [
-    "GAIA_FLAG_NAME = \"wfc_flag_gaia\"\n",
+    "GAIA_FLAG_NAME = \"video_flag_gaia\"\n",
     "\n",
     "catalogue['flag_gaia'].name = GAIA_FLAG_NAME\n",
     "print(\"{} sources flagged.\".format(np.sum(catalogue[GAIA_FLAG_NAME] > 0)))"
