--- a/dmu1/dmu1_ml_AKARI-NEP/master_catalogue_AKARI-NEP.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/master_catalogue_AKARI-NEP.ipynb
@@ -41,6 +41,17 @@
     "from herschelhelp_internal import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[1.345,1.,2345.,2345.,5.555]"
+   ]
   }
  ],
  "metadata": {
