Fixing unit issues on COMBO. Needs checking

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.4_PanSTARRS.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.4_PanSTARRS.ipynb
@@ -7,7 +7,7 @@
     "# CDFS SWIRE master catalogue\n",
     "## Preparation of PanSTARRS data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_PanSTARRS1-3SS`.\n",
+    "The catalogue comes from `dmu0_PanSTARRS1-3SS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
