Fixing ra,dec names in Lockman-SWIRE/PS1

--- a/dmu1/dmu1_ml_Lockman-SWIRE/1.3_PanSTARRS-3SS.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/1.3_PanSTARRS-3SS.ipynb
@@ -117,8 +117,8 @@
    "source": [
     "imported_columns = OrderedDict({\n",
     "        \"objID\": \"ps1_id\",\n",
-    "        \"rra\": \"ps1_ra\",\n",
-    "        \"rdec\": \"ps1_dec\",\n",
+    "        \"raMean\": \"ps1_ra\",\n",
+    "        \"decMean\": \"ps1_dec\",\n",
     "        \"gApMag\": \"m_ap_gpc1_g\",\n",
     "        \"gApMagErr\": \"merr_ap_gpc1_g\",\n",
     "        \"gKronMag\": \"m_gpc1_g\",\n",
