Updated ELAIS-S1 SUFFIX

--- a/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
@@ -72,8 +72,8 @@
    "outputs": [],
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
-    "#SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
-    "SUFFIX = \"_20170711\"\n",
+    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "#SUFFIX = \"_20170711\"\n",
     "\n",
     "master_catalogue = Table.read(\"{}/master_catalogue_elais-s1{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
