ELAIS-S1 running through to Checks and Diagnostics

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
@@ -221,6 +221,12 @@
    },
    "outputs": [],
    "source": [
+    "#Replace 99.0 with NaN values\n",
+    "for col in catalogue.colnames:\n",
+    "    catalogue[col].unit = None\n",
+    "    if col.startswith('m'): # | col.endswith('ra') | col.endswith('dec'):\n",
+    "        catalogue[col][np.where(catalogue[col] == 99.0)] = np.nan\n",
+    "        \n",
     "# Adding band-flag columns\n",
     "for col in catalogue.colnames:\n",
     "    if col.startswith('m_'):\n",
