--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VIDEO.ipynb
@@ -225,7 +225,7 @@
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    if col.startswith('m'): # | col.endswith('ra') | col.endswith('dec'):\n",
-    "        catalogue[col][np.where(catalogue[col] == 99.0)] = np.nan\n",
+    "        catalogue[col][np.where(catalogue[col] > 90.0)] = np.nan\n",
     "        \n",
     "# Adding band-flag columns\n",
     "for col in catalogue.colnames:\n",
