Changes to hole code - only produce holes over survey area

--- a/dmu4/dmu4_sm_CDFS-SWIRE/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_CDFS-SWIRE/generate_holes.ipynb
@@ -11,16 +11,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "37d9c0f (Tue Jul 18 17:43:07 2017 +0100) [with local modifications]\n"
+      "668d408 (Wed Aug 2 15:55:58 2017 +0100) [with local modifications]\n"
      ]
     }
    ],
@@ -32,12 +30,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from herschelhelp_internal import starmask\n"
+    "from herschelhelp_internal import starmask\n",
+    "from pymoc import MOC"
    ]
   },
   {
@@ -50,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Field names plus ra dec of first circle\n",
@@ -94,13 +89,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_CDFS-SWIRE.fits',\n",
-    "                             'data/10_arcsec_holes_CDFS-SWIRE.reg')\n",
+    "                      'data/10_arcsec_holes_CDFS-SWIRE.reg',\n",
+    "                      '../../dmu2/dmu2_field_coverages/CDFS-SWIRE_MOC.fits')\n",
     "    \n"
    ]
   },
@@ -114,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ORDER=16\n",
@@ -138,31 +131,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run CDFS-SWIRE with parameters from IDL code.\n",
     "per_catalogue_params = [\n",
     "#     Field       Band        A         B           magnitude limit\n",
     "    ['CDFS-SWIRE', 'irac1',   2.65405,  -0.106177,  18], #Using 18 as faint limit.\n",
-    "    ['CDFS-SWIRE', 'gpc1_r',  1.78775,  -0.0679605, 13], # Using values from ELAIS-N1. Using 18 as faint limit.\n",
+    "    ['CDFS-SWIRE', 'gpc1_r',  1.78775,  -0.0679605, 13], # Using values from ELAIS-N1. \n",
     "    ['CDFS-SWIRE', 'vhs_k',   2.79833,  -0.101774,  18], # Using 18 as faint limit.\n",
     "    ['CDFS-SWIRE', 'video_k', 1.95959,  -0.0711362, 18], # Using 18 as faint limit.\n",
     "    ['CDFS-SWIRE', 'atlas_r', 3.48990,  -0.163769,  18], # Using 18 as faint limit.\n",
-    "    ['CDFS-SWIRE', 'combo_r', 3.00201,  -0.128652,  18], # Using 18 as faint limit.\n",
+    "    ['CDFS-SWIRE', 'combo_r', 3.00201,  -0.128652,  18]  # Using 18 as faint limit.\n",
     "    \n",
-    "]   "
+    "]   \n",
+    "\n",
+    "#Combine SERVS and SWIRE mocs because irac1 fluxes can be from either\n",
+    "swire_moc = MOC(filename = '../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SWIRE_CDFS-SWIRE_MOC.fits')\n",
+    "servs_moc = MOC(filename = '../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_CDFS-SWIRE_MOC.fits')\n",
+    "irac1_moc = swire_moc + servs_moc\n",
+    "irac1_moc.write('data/SERVS_SWIRE_COVERAGE_irac1_CDFS-SWIRE_MOC.fits', filetype='fits' ,overwrite=True)\n",
+    "\n",
+    "moc_files = {\n",
+    "    'irac1'  :'data/SERVS_SWIRE_COVERAGE_irac1_CDFS-SWIRE_MOC.fits',\n",
+    "    'gpc1_r' :'../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_CDFS-SWIRE_MOC.fits',\n",
+    "    'vhs_k'  :'../../dmu0/dmu0_VISTA-VHS/data/VHS_CDFS-SWIRE_MOC.fits',\n",
+    "    'video_k':'../../dmu0/dmu0_VISTA-VIDEO-private/data/VIDEO-all_2016-04-14_fullcat_errfix_CDFS-SWIRE_MOC.fits',\n",
+    "    'atlas_r':'../../dmu0/dmu0_ATLAS/data/ATLAS_CDFS-SWIRE_MOC.fits',\n",
+    "    'combo_r':'../../dmu0/dmu0_COMBO-17/data/table3_MOC.fits'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,10 +189,11 @@
    ],
    "source": [
     "for pristine_cat in per_catalogue_params:\n",
-    "    starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_' + pristine_cat[0] + '.fits',\n",
-    "                          'data/holes_' + pristine_cat[0] + '_' + pristine_cat[1] + '.reg',\n",
-    "                         AB = [pristine_cat[2],pristine_cat[3]],\n",
-    "                         mag_lim = pristine_cat[4])"
+    "    starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_' + pristine_cat[0] + '.fits',    #GAIA catalogue\n",
+    "                          'data/holes_' + pristine_cat[0] + '_' + pristine_cat[1] + '.reg', #output file\n",
+    "                          moc_files[pristine_cat[1]],                                       #moc of survey region\n",
+    "                          AB = [pristine_cat[2],pristine_cat[3]],                           #radius as f of mag params\n",
+    "                          mag_lim = pristine_cat[4])                                        #upper magnitude limit"
    ]
   },
   {
@@ -201,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -265,6 +268,15 @@
     "            dec_typ=fields['CDFS-SWIRE'][1],\n",
     "            order=ORDER)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
