--- a/dmu1/dmu1_ml_CDFS-SWIRE/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/2_Merging.ipynb
@@ -692,6 +692,8 @@
    "source": [
     "## VI - Choosing between multiple values for the same filter\n",
     "\n",
+    "### VI.a SERVS vs SWIRE\n",
+    "\n",
     "Both SERVS and SWIRE provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes."
    ]
   },
@@ -870,7 +872,7 @@
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[use_servs] = \"SERVS\"\n",
     "origin[use_swire] = \"SWIRE\"\n",
-    "irac_origin.add_column(Column(data=origin, name=\"IRAC1_app\"))"
+    "irac_origin.add_column(Column(data=origin, name=\"IRAC1_ap\"))"
    ]
   },
   {
@@ -1013,7 +1015,7 @@
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[use_servs] = \"SERVS\"\n",
     "origin[use_swire] = \"SWIRE\"\n",
-    "irac_origin.add_column(Column(data=origin, name=\"IRAC2_app\"))"
+    "irac_origin.add_column(Column(data=origin, name=\"IRAC2_ap\"))"
    ]
   },
   {
@@ -1099,6 +1101,14 @@
    "outputs": [],
    "source": [
     "irac_origin.write(\"{}/cdfs-swire_irac_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VI.b VIDEO vs VHS\n",
+    "VIDEO is deeper than VHS so we take VIDEO flux for any source that has both."
    ]
   },
   {
