--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -52,7 +50,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -78,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,7 +111,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -140,7 +136,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -208,7 +204,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -217,6 +213,9 @@
     "    catalogue[col].unit = None\n",
     "    if col.startswith('m'): # | col.endswith('ra') | col.endswith('dec'):\n",
     "        catalogue[col][np.where(catalogue[col] > 90.0)] = np.nan\n",
+    "    #Remove negative fluxes. These could contain upper limits but we do not want this information in the masterlist.\n",
+    "    if col.startswith('f'): # | col.endswith('ra') | col.endswith('dec'):\n",
+    "        catalogue[col][np.where(catalogue[col] < 0.0)] = np.nan\n",
     "        \n",
     "# Adding band-flag columns\n",
     "for col in catalogue.colnames:\n",
@@ -239,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -329,9 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -382,9 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -423,9 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -461,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -510,7 +499,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -522,9 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -552,7 +539,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -575,7 +562,7 @@
    },
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/VIDEO.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/VISTA-VIDEO.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
