--- a/dmu1/dmu1_ml_CDFS-SWIRE/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/3_Checks_and_diagnostics.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -34,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -66,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -97,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "flag_obs = master_catalogue['flag_optnir_obs']\n",
@@ -109,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -152,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -209,7 +197,7 @@
     "r_bands = [\"ATLAS r\", \"COMBO r\", \"PS1 r\"]\n",
     "i_bands = [\"ATLAS i\", \"COMBO i\", \"PS1 i\"]\n",
     "z_bands = [\"ATLAS z\",            \"PS1 z\"]\n",
-    "y_bands = [                      \"PS1 y\", \"VIDEO y\", \"VHS y\"]"
+    "y_bands = [                      \"PS1 y\", \"VISTA y\", \"VISTA y\"]"
    ]
   },
   {
@@ -225,7 +213,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -323,7 +310,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -862,9 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -889,16 +873,14 @@
     }
    ],
    "source": [
-    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_video_j'][ml_twomass_idx],\n",
-    "                labels=(\"2MASS J\", \"VIDEO J (total)\"))"
+    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_vista_j'][ml_twomass_idx],\n",
+    "                labels=(\"2MASS J\", \"VISTA J (total)\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -923,10 +905,10 @@
     }
    ],
    "source": [
-    "ukidss_ks_like = master_catalogue['m_video_k'] + 0.003 + 0.004 * (\n",
-    "    master_catalogue['m_video_j'] - master_catalogue['m_video_k'])\n",
+    "ukidss_ks_like = master_catalogue['m_vista_k'] + 0.003 + 0.004 * (\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'])\n",
     "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, ukidss_ks_like[ml_twomass_idx],\n",
-    "                labels=(\"2MASS Ks\", \"VIDEO Ks-like (total)\"))"
+    "                labels=(\"2MASS Ks\", \"VISTA Ks-like (total)\"))"
    ]
   },
   {
@@ -941,9 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -986,7 +966,6 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1011,8 +990,8 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_ps1_g'] - master_catalogue['m_ps1_i'],\n",
-    "    master_catalogue['m_video_j'] - master_catalogue['m_video_k'],\n",
-    "    \"g - i (PanSTARRS)\", \"J - K (VIDEO)\",\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    \"g - i (PanSTARRS)\", \"J - K (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -1020,9 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1054,9 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1088,9 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1112,9 +1085,9 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_video_j'] - master_catalogue['m_video_k'],\n",
-    "    master_catalogue['m_ps1_g'] - master_catalogue['m_video_j'],\n",
-    "    \"J - K (VIDEO)\", \"g - J (PanSTARRS, VIDEO)\",\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    master_catalogue['m_ps1_g'] - master_catalogue['m_vista_j'],\n",
+    "    \"J - K (VISTA)\", \"g - J (PanSTARRS, VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -1122,9 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1147,8 +1118,8 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_ps1_i'] - master_catalogue['m_ps1_z'],\n",
-    "    master_catalogue['m_ps1_z'] - master_catalogue['m_video_j'],\n",
-    "    \"i - z (PanSTARRS)\", \"z - J (PanSTARRS, VIDEO)\",\n",
+    "    master_catalogue['m_ps1_z'] - master_catalogue['m_vista_j'],\n",
+    "    \"i - z (PanSTARRS)\", \"z - J (PanSTARRS, VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -1156,9 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
