XID+SPIRE_ELAIS-N1_SWIRE and typos in XID+MIPS_ELAIS-N1 readme

--- a/dmu26/dmu26_XID+SPIRE_ELAIS-N1/XID+SPIRE_prior_SERVS.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_ELAIS-N1/XID+SPIRE_prior_SERVS.ipynb
@@ -221,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from astropy.io import fits\n",
@@ -454,9 +456,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:new]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-new-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
