--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -192,9 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -204,8 +204,8 @@
     "    \"../../dmu24/dmu24_ELAIS-N1/data/master_catalogue_elais-n1_20170706_photoz_20170725_irac1_optimised.fits\")\n",
     "photoz.meta = None\n",
     "\n",
-    "photoz = photoz['help_id', 'za_hb']\n",
-    "photoz['za_hb'].name = 'redshift'"
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'"
    ]
   },
   {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -302,13 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "merged_table[columns].write(\"data/ELAIS-N1_20170810.fits\")"
+    "merged_table[columns].write(\"data/ELAIS-N1_20170811.fits\")"
    ]
   }
  ],
