[dmu32_ELAIS-N1] Set negative redshifts to NaN

--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -205,7 +205,9 @@
     "photoz.meta = None\n",
     "\n",
     "photoz = photoz['help_id', 'z1_median']\n",
-    "photoz['z1_median'].name = 'redshift'"
+    "photoz['z1_median'].name = 'redshift'\n",
+    "\n",
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # Eazy uses -99 for missing values"
    ]
   },
   {
