--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -37,15 +37,8 @@
    "source": [
     "# Master list\n",
     "\n",
-    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20170706.fits\")\n",
-    "ml.meta = None\n",
-    "\n",
-    "# Column names to be corrected in the master list creation\n",
-    "for col in ml.colnames:\n",
-    "    if 'cfht' in col:\n",
-    "        ml[col].name = col.replace('cfht_', '')\n",
-    "    if 'irac' in col:\n",
-    "        ml[col].name = col.replace('irac', 'irac_i')"
+    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20170814.fits\")\n",
+    "ml.meta = None"
    ]
   },
   {
