--- a/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
@@ -453,14 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V - Flagging objects near bright stars"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# VI - Saving to disk"
+    "# V - Saving to disk"
    ]
   },
   {
@@ -492,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
