[dmu32_ELAIS-N1] Add spec-z columns in merged catalogue

--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# Master list\n",
     "\n",
-    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20170814.fits\")\n",
+    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20170815.fits\")\n",
     "ml.meta = None"
    ]
   },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift']\n",
+    "columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "for band in bands:\n",
     "    for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
     "                    'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
@@ -273,7 +273,7 @@
     "        if colname in merged_table.colnames:\n",
     "            columns.append(colname)\n",
     "columns += ['stellarity', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
-    "            'flag_optnir_obs', 'flag_optnir_det']"
+    "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']"
    ]
   },
   {
@@ -303,7 +303,7 @@
    },
    "outputs": [],
    "source": [
-    "merged_table[columns].write(\"data/ELAIS-N1_20170811.fits\")"
+    "merged_table[columns].write(\"data/ELAIS-N1_20170816.fits\")"
    ]
   }
  ],
