--- a/dmu0/dmu0_LegacySurvey/LegacySurvey_DR4_download.ipynb
+++ b/dmu0/dmu0_LegacySurvey/LegacySurvey_DR4_download.ipynb
@@ -228,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "help_mask = inMoc(dr4_bricks['ra'],\n",
@@ -421,15 +423,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -453,6 +446,7 @@
     "    mask = inMoc(field_catalogue['ra'],\n",
     "                 field_catalogue['dec'],\n",
     "                 MOC(filename='../../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0])))\n",
+    "    field_catalogue.add_column(Column(data=field[0], name=\"Field\")) #Does it work without providing an array\n",
     "    field_catalogue[mask].write('./data/LegacySurvey-dr4_{}_help_only.fits'.format(field[0]))"
    ]
   },
