Changed Legacy Survey download code to deal with edge effects

--- a/dmu0/dmu0_LegacySurvey/LegacySurvey_DR4_download.ipynb
+++ b/dmu0/dmu0_LegacySurvey/LegacySurvey_DR4_download.ipynb
@@ -182,31 +182,39 @@
    },
    "outputs": [],
    "source": [
+    "#TODO: Maybe check for edge effects and add add extra leeway\n",
     "fields= [\n",
-    "# Field                RA              DEC\n",
-    "['AKARI-NEP',          274.654402036,  65.7962520276 ],\n",
-    "['AKARI-SEP',          72.2316923316, -54.380443672  ],\n",
-    "['Bootes',             216.431700722,  32.401081899  ],\n",
-    "['CDFS-SWIRE',         51.0227099923, -29.8185285737 ],\n",
-    "['COSMOS',             149.295925951,  1.08212668291 ],\n",
-    "['EGS',                217.276981956,  53.6441519854 ],\n",
-    "['ELAIS-N1',           247.096600963,  55.1757687739 ],\n",
-    "['ELAIS-N2',           248.424493154,  39.1274077489 ],\n",
-    "['ELAIS-S1',           7.10625839472, -43.8632559768 ],\n",
-    "['GAMA-09',            129.076050945, -2.23171513025 ],\n",
-    "['GAMA-12',            172.84437099,  -0.482115877707],\n",
-    "['GAMA-15',            211.756497623, -2.28573712848 ],\n",
-    "['HDF-N',              190.259734752,  62.205265532  ],\n",
-    "['Herschel-Stripe-82', 353.751913281, -7.10891111165 ],\n",
-    "['Lockman-SWIRE',      161.942787703,  59.0563805825 ],\n",
-    "['NGP',                192.899559129,  22.0990890388 ],\n",
-    "['SA13',               197.895801254,  42.4400105492 ],\n",
-    "['SGP',                334.297748942, -34.5037863499 ],\n",
-    "['SPIRE-NEP',          266.334305546,  68.7904496043 ],\n",
-    "['SSDF',               341.577544902, -59.1868365369 ],\n",
-    "['xFLS',               261.387059958,  58.0184602211 ],\n",
-    "['XMM-13hr',           203.318355937,  37.4745777866 ],\n",
-    "['XMM-LSS',            32.9413834032, -6.02293494708 ]]"
+    "# Field                RAtyp    DECtyp   RAmin   RAmax   DECmin  DECmax\n",
+    "['AKARI-NEP',          274.65,  65.796,  263.6,  266.5,  68.48,  69.51 ],\n",
+    "['AKARI-SEP',          72.231, -54.380,   66.1,  75.5,  -55.96, -51.61 ],\n",
+    "['Bootes',             216.43,  32.401,  215.7,  220.7,  32.12,  36.18 ],\n",
+    "['CDFS-SWIRE',         51.022, -29.818,   50.7,  55.5,  -30.50, -25.92 ],\n",
+    "['COSMOS',             149.29,  1.0821,  148.6,  151.6,  0.72,   3.71  ],\n",
+    "['EGS',                217.27,  53.644,  212.3,  217.6,  51.08,  54.31 ],\n",
+    "['ELAIS-N1',           247.09,  55.175,  237.9,  247.9,  52.37,  57.59 ],\n",
+    "['ELAIS-N2',           248.42,  39.127,  246.1,  252.3,  39.02,  43.02 ],\n",
+    "['ELAIS-S1',           7.1062, -43.863,    6.3,  11.3,  -45.60, -41.53 ],\n",
+    "['GAMA-09',            129.07, -2.2317,  127.1,  142.2, -2.53,   3.55  ],\n",
+    "['GAMA-12',            172.84,  -0.482,  172.2,  187.4, -3.54,   2.59  ],\n",
+    "['GAMA-15',            211.75, -2.2857,  209.9,  225.3, -2.57,   3.5   ],\n",
+    "['HDF-N',              190.25,  62.205,  188.0,  190.4,  61.69,  62.78 ],\n",
+    "['Herschel-Stripe-82', 353.75, -7.1089,  348.3,  19.1,  -9.5,    9.25  ],\n",
+    "['Lockman-SWIRE',      161.94,  59.056,  154.7,  167.8,  54.95,  60.89 ],\n",
+    "['NGP',                192.89,  22.099,  189.8,  209.3,  21.62,  36.16 ],\n",
+    "['SA13',               197.89,  42.440,  197.5,  198.6,  42.34,  43.09 ],\n",
+    "['SGP',                334.29, -34.503,  333.5,  28.2,  -37.1,  -26.0  ],\n",
+    "['SPIRE-NEP',          266.33,  68.790,  264.6,  275.4,  64.41,  68.63 ],\n",
+    "['SSDF',               341.57, -59.186,  340.5,  2.8,   -61.2,  -48.6  ],\n",
+    "['xFLS',               261.38,  58.018,  255.6,  262.5,  57.85,  60.84 ],\n",
+    "['XMM-13hr',           203.31,  37.474,  202.8,  204.4,  37.31,  38.52 ],\n",
+    "['XMM-LSS',            32.941, -6.0229,   32.1,  38.2,  -7.53,  -1.52  ]]\n",
+    "   \n",
+    "    \n",
+    "#Has a field been removed?  ( RA BETWEEN 13.4 AND 36.3 AND DEC BETWEEN -2.32 AND 2.49 )\n",
+    "       \n",
+    "    \n",
+    "    \n",
+    "  "
    ]
   },
   {
@@ -304,6 +312,68 @@
     "    field_bricks_file.close()\n",
     "    field_downloads_file.close()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the RA/DEC limits\n",
+    "Because of edge effects it is better to use the conservative ra/dec bounding boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('There are ' + str(len(dr4_bricks[help_mask])) + ' bricks in Legacy Survey DR4 in HELP fields')\n",
+    "help_bricks_file = open(\"./data/help_bricks.lis\", \"w\")\n",
+    "help_downloads_file = open(\"./data/help_bricks_downloads.lis\", \"w\")\n",
+    "field_coverages = {}\n",
+    "\n",
+    "def inRectangle(RAmin, RAmax, DECmin, DECmax, ra, dec):\n",
+    "    if RAmin < RAmax:\n",
+    "        if ra > RAmin and ra < RAmax and dec > DECmin and dec < DECmax:\n",
+    "            output = True\n",
+    "        else:\n",
+    "            output = False\n",
+    "    elif RAmin > RAmax:\n",
+    "        if (ra > RAmin or ra < RAmax) and (dec > DECmin and dec < DECmax):\n",
+    "            output = True\n",
+    "        else:\n",
+    "            output = False\n",
+    "        \n",
+    "    return output\n",
+    "        \n",
+    "\n",
+    "for field in fields:\n",
+    "    \n",
+    "    #TODO: creplace inMoc with new function nearMoc to avoid any edge effects\n",
+    "    field_mask = inMoc(dr4_bricks['ra'],\n",
+    "                       dr4_bricks['dec'],\n",
+    "                       MOC(filename=\"../../dmu2/dmu2_field_coverages/{}_MOC.fits\".format(field[0])))\n",
+    "    print('There are ' + str(len(dr4_bricks[field_mask])) + ' bricks in Legacy Survey DR4 for ' + field[0])\n",
+    "    field_coverages[field[0]] = len(dr4_bricks[field_mask])\n",
+    "    field_bricks_file  = open(\"./data/{}_bricks_wider.lis\".format(field[0]), \"w\")\n",
+    "    field_downloads_file  = open(\"./data/{}_bricks_downloads_wider.lis\".format(field[0]), \"w\")\n",
+    "    for brick in dr4_bricks:\n",
+    "        if inRectangle(field[3], field[4], field[5], field[6], brick['ra'], brick['dec'])\n",
+    "        \n",
+    "            brick_string = (\"public/hlsp/ls/dr4/tractor/\" \n",
+    "                      + brick['brickname'][:3] \n",
+    "                      + '/tractor-' \n",
+    "                      + brick['brickname'] \n",
+    "                      + '.fits\\n')\n",
+    "            field_bricks_file.write(brick_string)\n",
+    "            field_downloads_file.write(\"ftp://archive.noao.edu/\" + brick_string)\n",
+    "            help_bricks_file.write(brick_string)\n",
+    "            help_downloads_file.write(\"ftp://archive.noao.edu/\" + brick_string)\n",
+    "    field_bricks_file.close()\n",
+    "    field_downloads_file.close()"
    ]
   },
   {
